# nerf

./: .gitignore  README.md
.github/workflows/: static.yml
sandbox/: model.onnx  output.avi  tiny_nelf.ipynb  tiny_nelf.pt  tiny_nerf.ipynb
sandbox/burn_test/: Cargo.toml  build.rs  index.html
sandbox/burn_test/src/: inference.rs  lib.rs  main.rs
sandbox/burn_test/src/model/: mod.rs  nelf.onnx
sandbox/burn_test/styles/: style.css
sandbox/inference/: app.py
sandbox/inference/templates/: index.html
sandbox/inference_csr/: index.html  index__.html  test.html
src/py/: debug.ipynb  requirements.txt  run_train.sh  sbatch_run_train.sh  train.ipynb  train.py
src/py/data/: datamodule.py  dataset.py  utils.py
src/py/model/: lightningmodule.py  model.py
src/www/: index.html
