[package]
name = "burn_test"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.13.2", default-features = false, features = [ "ndarray" ] }
# burn-wgpu = { version = "0.13.2", default-features = false }
burn-ndarray = { version = "0.13.2", default-features = false }

js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  'ImageData',
  'CanvasRenderingContext2d',
]}
# yew = { version = "0.21.0", features = ["csr"] }

[build-dependencies]
burn-import = "0.13.2"
